--- a/src/main/resources/templates/fragments/inputField.html
+++ b/src/main/resources/templates/fragments/inputField.html
@@ -8,8 +8,8 @@
         <label class="col-sm-2 control-label" th:text="${label}">Label</label>
         <div class="col-sm-10">
             <div th:switch="${type}">
-                <input th:case="'text'" class="form-control" type="text" th:field="*{__${name}__}" />
-                <input th:case="'date'" class="form-control" type="date" th:field="*{__${name}__}"/>
+                <input th:case="'text'" class="form-control" type="text" th:field="*{${name}}" />
+                <input th:case="'date'" class="form-control" type="date" th:field="*{${name}}"/>
             </div>
           <span th:if="${valid}"
             class="fa fa-ok form-control-feedback"
@@ -18,7 +18,7 @@
             <span
               class="fa fa-remove form-control-feedback"
               aria-hidden="true"></span>
-            <span class="help-inline" th:errors="*{__${name}__}">Error</span>
+            <span class="help-inline" th:errors="*{${name}}">Error</span>
           </th:block>
         </div>
       </div>
