--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -30,7 +30,7 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-navbar">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="main-navbar" style>
+      <div class="collapse navbar-collapse" id="main-navbar">
 
         <ul class="navbar-nav me-auto mb-2 mb-lg-0" th:remove="all">
 
