--- a/src/main/resources/templates/fragments/selectField.html
+++ b/src/main/resources/templates/fragments/selectField.html
@@ -8,7 +8,7 @@
         <label class="col-sm-2 control-label" th:text="${label}">Label</label>
 
         <div class="col-sm-10">
-          <select th:field="*{__${name}__}">
+          <select th:field="*{name}">
             <option th:each="item : ${items}" th:value="${item}"
               th:text="${item}">dog</option>
           </select>
@@ -19,7 +19,7 @@
             <span
               class="fa fa-remove form-control-feedback"
               aria-hidden="true"></span>
-            <span class="help-inline" th:errors="*{__${name}__}">Error</span>
+            <span class="help-inline" th:errors="*{name}">Error</span>
           </th:block>
         </div>
       </div>
